...
    <string name="unselect_all">Unselect All</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="share_note">Share Note</string>
    <string name="share_note_as_text">Share Note as Text</string>
    <string name="share_note_as_text_subtitle">Shares the note\'s content as a simple text message</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="refresh">Refresh</string>

    <!--  TextField placeholder  -->
    <string name="search_textField">Input title here</string>
...
