...
class TagManagerMockVM : ViewModel(), TagManagerBaseVM {
    override val loader = MutableLiveData<Boolean>(false)

    private val _tagList = MutableLiveData<Result<List<TagModel>>>(
        Result.success(
            listOf(
                TagModel(1, "Work", "#EF5350"),
                TagModel(2, "Personal", "#42A5F5"),
                TagModel(3, "Ideas", "#66BB6A")
            )
        )
    )
    override val tagList: LiveData<Result<List<TagModel>>> = _tagList

...
